@@ -20,6 +20,7 @@ import com.google.common.util.concurrent.Futures;
 import com.google.common.util.concurrent.ListenableFuture;
 import com.google.common.util.concurrent.MoreExecutors;
 import com.google.common.util.concurrent.SettableFuture;
+import jakarta.annotation.Nullable;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
@@ -28,7 +29,6 @@ import org.springframework.cache.CacheManager;
 import org.springframework.stereotype.Service;
 import org.thingsboard.common.util.JacksonUtil;
 import org.thingsboard.rule.engine.api.RuleEngineTelemetryService;
-import org.thingsboard.server.cluster.TbClusterService;
 import org.thingsboard.server.common.data.AttributeScope;
 import org.thingsboard.server.common.data.Customer;
 import org.thingsboard.server.common.data.Device;
@@ -51,9 +51,7 @@ import org.thingsboard.server.dao.device.claim.ReclaimResult;
 import org.thingsboard.server.dao.model.ModelConstants;
 import org.thingsboard.server.queue.util.TbCoreComponent;
 
-import jakarta.annotation.Nullable;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -89,16 +87,16 @@ public class ClaimDevicesServiceImpl implements ClaimDevicesService {
         Device device = deviceService.findDeviceById(tenantId, deviceId);
         Cache cache = cacheManager.getCache(CLAIM_DEVICES_CACHE);
         List<Object> key = constructCacheKey(device.getId());
+        String deviceName = device.getName();
         if (isAllowedClaimingByDefault) {
             if (device.getCustomerId().getId().equals(ModelConstants.NULL_UUID)) {
                 persistInCache(secretKey, durationMs, cache, key);
                 return Futures.immediateFuture(null);
             }
-            log.warn("The device [{}] has been already claimed!", device.getName());
-            return Futures.immediateFailedFuture(new IllegalArgumentException());
+            return Futures.immediateFailedFuture(new IllegalArgumentException("Device [" + deviceName + "] has been already claimed!"));
         } else {
             ListenableFuture<List<AttributeKvEntry>> claimingAllowedFuture = attributesService.find(tenantId, device.getId(),
-                    AttributeScope.SERVER_SCOPE, Collections.singletonList(CLAIM_ATTRIBUTE_NAME));
+                    AttributeScope.SERVER_SCOPE, List.of(CLAIM_ATTRIBUTE_NAME));
             return Futures.transform(claimingAllowedFuture, list -> {
                 if (list != null && !list.isEmpty()) {
                     Optional<Boolean> claimingAllowedOptional = list.get(0).getBooleanValue();
@@ -108,8 +106,7 @@ public class ClaimDevicesServiceImpl implements ClaimDevicesService {
                         return null;
                     }
                 }
-                log.warn("Failed to find claimingAllowed attribute for device or it is already claimed![{}]", device.getName());
-                throw new IllegalArgumentException();
+                throw new IllegalArgumentException("Failed to find claimingAllowed attribute for device [" + deviceName + "] or it is already claimed!");
             }, MoreExecutors.directExecutor());
         }
     }
@@ -182,7 +179,7 @@ public class ClaimDevicesServiceImpl implements ClaimDevicesService {
             }
             SettableFuture<ReclaimResult> result = SettableFuture.create();
             telemetryService.saveAndNotify(
-                    tenantId, savedDevice.getId(), AttributeScope.SERVER_SCOPE, Collections.singletonList(
+                    tenantId, savedDevice.getId(), AttributeScope.SERVER_SCOPE, List.of(
                             new BaseAttributeKvEntry(new BooleanDataEntry(CLAIM_ATTRIBUTE_NAME, true), System.currentTimeMillis())
                     ),
                     new FutureCallback<>() {
@@ -203,7 +200,7 @@ public class ClaimDevicesServiceImpl implements ClaimDevicesService {
     }
 
     private List<Object> constructCacheKey(DeviceId deviceId) {
-        return Collections.singletonList(deviceId);
+        return List.of(deviceId);
     }
 
     private void persistInCache(String secretKey, long durationMs, Cache cache, List<Object> key) {
